chore: clean up build logs, move OCI guide to docs/, update .gitignore
- Remove build_log.txt, tsc_errors*.txt, LINK_CHECK_REPORT.md from tracking
- Move OCI_DEPLOYMENT_GUIDE.md from web/ to docs/
- Update web/.gitignore to prevent future log/report commits

--- a/web/.gitignore
+++ b/web/.gitignore
@@ -30,6 +30,13 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
+# build/dev logs and temp reports
+build_log.txt
+build_output*.log
+devserver*.log
+tsc_errors*.txt
+LINK_CHECK_REPORT.md
+
 # env files (can opt-in for committing if needed)
 .env*
 
